fix veritcal gap

--- a/styles.css
+++ b/styles.css
@@ -770,7 +770,7 @@ a:hover {
 
 .players-video-training-1 {
   grid-area: training-1;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.3rem;
   transform: none;
 }
 
